Views and html templates

--- a/catalog/templates/allofficers.html
+++ b/catalog/templates/allofficers.html
@@ -30,7 +30,7 @@
           <td>All Osca</td>
         </tr>
 
-        {% for officers in officers_pyle %}
+        {% for officers in allofficers %}
         <tr>
           <td>{{ officers.id }}</td>
           <td>{{ officers.coop}}</td>
