--- a/catalog/templates/allcoops.html
+++ b/catalog/templates/allcoops.html
@@ -10,36 +10,31 @@
     <li><strong>Members:</strong> {{ num_members }}</li>
   </ul>
 
-  <h1>Total number of Officers</h1>
-  <p>The database has the following number of officers:</p>
-  <ul>
-    <li><strong>Officers:</strong>{{num_officers}}</li>
-  </ul>
 
 
-  <h1>List of all Officers in OSCA</h1>
+  <h1>List of Coops in Oberlin</h1>
     <table border="1" width="1000">
         <tr>
-          <td>ID</td>
-          <td>Coop</td>
-          <td>Member</td>
-          <td>Position Name</td>
-          <td>Position Description</td>
-          <td>Hours Required</td>
-          <td>Emergency Contact</td>
-          <td>All Osca</td>
+            <td>ID</td>
+            <td>Name</td>
+            <td>Address</td>
+            <td>Building</td>
+            <td>Vegan</td>
+            <td>Number of Dining Students</td>
+            <td>Number of Housing Students</td>
+            <td>Hours Needed</td>
         </tr>
 
-        {% for officers in officers_pyle %}
+        {% for coops in allcoops %}
         <tr>
-          <td>{{ officers.id }}</td>
-          <td>{{ officers.coop}}</td>
-          <td>{{ officers.member}}</td>
-          <td>{{ officers.position_name}}</td>
-          <td>{{ officers.position_description}}</td>
-          <td>{{ officers.hours_required}}</td>
-          <td>{{ officers.emergency_contact}}</td>
-          <td>{{ officers.all_osca}}</td>
+            <td>{{ coops.id }}</td>
+            <td>{{ coops.name}}</td>
+            <td>{{ coops.address}}</td>
+            <td>{{ coops.building}}</td>
+            <td>{{ coops.vegan}}</td>
+            <td>{{ coops.num_dining}}</td>
+            <td>{{ num_housing}}</td>
+            <td>{{ hours_needed}}</td>
 
             
         </tr>
