--- a/catalog/templates/memberspyle.html
+++ b/catalog/templates/memberspyle.html
@@ -10,36 +10,35 @@
     <li><strong>Members:</strong> {{ num_members }}</li>
   </ul>
 
-  <h1>Total number of Officers</h1>
-  <p>The database has the following number of officers:</p>
-  <ul>
-    <li><strong>Officers:</strong>{{num_officers}}</li>
-  </ul>
 
 
-  <h1>List of all Officers in OSCA</h1>
+  <h1>List of Members in every Pyle</h1>
     <table border="1" width="1000">
         <tr>
-          <td>ID</td>
-          <td>Coop</td>
-          <td>Member</td>
-          <td>Position Name</td>
-          <td>Position Description</td>
-          <td>Hours Required</td>
-          <td>Emergency Contact</td>
-          <td>All Osca</td>
+            <td>ID</td>
+            <td>First Name</td>
+            <td>Last Name</td>
+            <td>Preferred Name</td>
+            <td>T Number</td>
+            <td>Coop</td>
+            <td>Email</td>
+            <td>Pronouns</td>
+            <td>Time Aid</td>
+            <td>Missed Jobs</td>
         </tr>
 
-        {% for officers in officers_pyle %}
+        {% for members in allmember %}
         <tr>
-          <td>{{ officers.id }}</td>
-          <td>{{ officers.coop}}</td>
-          <td>{{ officers.member}}</td>
-          <td>{{ officers.position_name}}</td>
-          <td>{{ officers.position_description}}</td>
-          <td>{{ officers.hours_required}}</td>
-          <td>{{ officers.emergency_contact}}</td>
-          <td>{{ officers.all_osca}}</td>
+            <td>{{ members.id }}</td>
+            <td>{{ members.first_name}}</td>
+            <td>{{ members.last_name}}</td>
+            <td>{{ members.preferred_name}}</td>
+            <td>{{ members.tnumber}}</td>
+            <td>{{ members.coop}}</td>
+            <td>{{ members.email}}</td>
+            <td>{{ members.pronouns}}</td>
+            <td>{{ members.time_aid}}</td>
+            <td>{{ members.missed_jobes}}</td>  
 
             
         </tr>
