--- a/catalog/templates/catalog/allofficers.html
+++ b/catalog/templates/catalog/allofficers.html
@@ -1,14 +1,6 @@
 {% extends "base_generic.html" %}
 
 {% block content %}
-  <h1>Osca Home</h1>
-  <p>Welcome to Osca Database, a website developed by <em>Harsha, Noah, and Henry </em>!</p>
-  <h2>Dynamic content</h2>
-  <p>The database has the following record counts:</p>
-  <ul>
-    <li><strong>Coops:</strong> {{ num_coops }}</li>
-    <li><strong>Members:</strong> {{ num_members }}</li>
-  </ul>
 
   <h1>Total number of Officers</h1>
   <p>The database has the following number of officers:</p>
@@ -24,19 +16,19 @@
           <td>Coop</td>
           <td>Member</td>
           <td>Position Name</td>
-          <td>Position Description</td>
+          <!-- <td>Position Description</td> -->
           <td>Hours Required</td>
           <td>Emergency Contact</td>
           <td>All Osca</td>
         </tr>
 
-        {% for officers in allofficers %}
+        {% for officers in object_list %}
         <tr>
           <td>{{ officers.id }}</td>
           <td>{{ officers.coop}}</td>
           <td>{{ officers.member}}</td>
           <td>{{ officers.position_name}}</td>
-          <td>{{ officers.position_description}}</td>
+          <!-- <td>{{ officers.position_description}}</td> -->
           <td>{{ officers.hours_required}}</td>
           <td>{{ officers.emergency_contact}}</td>
           <td>{{ officers.all_osca}}</td>
@@ -45,6 +37,23 @@
         </tr>
         {% endfor %}
     </table>
+    <div class="pagination" style ="width: 50%; margin: 0 auto;">
+      <span class="step-links">
+          {% if page_obj.has_previous %}
+              <a href="?page=1">&laquo; first</a>
+              <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+          {% endif %}
+  
+          <span class="current">
+              Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+          </span>
+  
+          {% if page_obj.has_next %}
+              <a href="?page={{ page_obj.next_page_number }}"> next </a>
+              <a href="?page={{ page_obj.paginator.num_pages }}"> last &raquo;</a>
+          {% endif %}
+      </span>
+  </div>
 {% endblock %}
 
 <!-- <html>
