--- a/catalog/templates/catalog/allmembers.html
+++ b/catalog/templates/catalog/allmembers.html
@@ -1,10 +1,7 @@
 {% extends "base_generic.html" %}
 
 {% block content %}
-  <h1>Osca Home</h1>
-  <p>Welcome to Osca Database, a website developed by <em>Harsha, Noah, and Henry </em>!</p>
-  <h2>Dynamic content</h2>
-  <p>The database has the following record counts:</p>
+  <h1>All OSCA members</h1>
   <ul>
     <li><strong>Coops:</strong> {{ num_coops }}</li>
     <li><strong>Members:</strong> {{ num_members }}</li>
@@ -18,32 +15,49 @@
             <td>ID</td>
             <td>First Name</td>
             <td>Last Name</td>
-            <td>Preferred Name</td>
-            <td>T Number</td>
+            <!-- <td>Preferred Name</td>
+            <td>T Number</td> -->
             <td>Coop</td>
-            <td>Email</td>
+            <!-- <td>Email</td> -->
             <td>Pronouns</td>
-            <td>Time Aid</td>
-            <td>Missed Jobs</td>
+            <!-- <td>Time Aid</td>
+            <td>Missed Jobs</td> -->
         </tr>
 
-        {% for members in allmember %}
+        {% for members in object_list %}
         <tr>
             <td>{{ members.id }}</td>
             <td>{{ members.first_name}}</td>
             <td>{{ members.last_name}}</td>
-            <td>{{ members.preferred_name}}</td>
-            <td>{{ members.tnumber}}</td>
+            <!-- <td>{{ members.preferred_name}}</td>
+            <td>{{ members.tnumber}}</td> -->
             <td>{{ members.coop}}</td>
-            <td>{{ members.email}}</td>
+            <!-- <td>{{ members.email}}</td> -->
             <td>{{ members.pronouns}}</td>
-            <td>{{ members.time_aid}}</td>
-            <td>{{ members.missed_jobes}}</td>  
+            <!-- <td>{{ members.time_aid}}</td>
+            <td>{{ members.missed_jobes}}</td>   -->
 
             
         </tr>
         {% endfor %}
     </table>
+    <div class="pagination" style ="width: 50%; margin: 0 auto;">
+        <span class="step-links">
+            {% if page_obj.has_previous %}
+                <a href="?page=1">&laquo; first</a>
+                <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+            {% endif %}
+    
+            <span class="current">
+                Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+            </span>
+    
+            {% if page_obj.has_next %}
+                <a href="?page={{ page_obj.next_page_number }}"> next </a>
+                <a href="?page={{ page_obj.paginator.num_pages }}"> last &raquo;</a>
+            {% endif %}
+        </span>
+    </div>
 {% endblock %}
 
 <!-- <html>
