Testing serving static files on Heroku with whitenoise

--- a/catalog/templates/index.html
+++ b/catalog/templates/index.html
@@ -3,6 +3,8 @@
 {% block content %}
   <h1>Osca Home</h1>
   <p>Welcome to Osca Database, a website developed by <em>Harsha, Noah, and Henry </em>!</p>
+  {% load static %}
+  <img src="{% static 'images/twinpines.png' %}" alt="Our Logo" style="width:555px;height:540px;">
   <h2>Dynamic content</h2>
   <p>The database has the following record counts:</p>
   <ul>
