--- a/catalog/templates/base_generic.html
+++ b/catalog/templates/base_generic.html
@@ -31,6 +31,7 @@
           
 
           <li><a href="{% url 'officer-create' %}">Add Officers</a></a></li>
+          <li><a href="{% url 'keep-work-chart' %}">Keep Work Chart</a></a></li>
 
         </ul>
      {% endblock %}
