--- a/catalog/templates/catalog/allofficers.html
+++ b/catalog/templates/catalog/allofficers.html
@@ -7,11 +7,14 @@
     <li><strong>Officers:</strong>{{num_officers}}</li>
   </ul>
 
+  <style>
+    .columns { white-space: nowrap; overflow: hidden; text-overflow:ellipsis; margin:0 auto; padding-left:5px}
+  </style>
 
-  <h1>List of all Officers in OSCA</h1>
+
+  <h1 style="padding-left: 12%; font-weight: bold" >List of all Officers in OSCA</h1>
     <table border="1" width="1000">
         <tr>
-          <td>ID</td>
           <td>Coop</td>
           <td>Member</td>
           <td>Position Name</td>
@@ -23,14 +26,12 @@
 
         {% for officers in object_list %}
         <tr>
-          <td>{{ officers.id }}</td>
-          <td>{{ officers.coop}}</td>
-          <td>{{ officers.member}}</td>
-          <td>{{ officers.position_name}}</td>
-          <!-- <td>{{ officers.position_description}}</td> -->
-          <td>{{ officers.hours_required}}</td>
-          <td>{{ officers.emergency_contact}}</td>
-          <td>{{ officers.all_osca}}</td>
+          <td><div class="columns" >{{ officers.coop }}</div></td>
+          <td><div class="columns" >{{ officers.member}}</div></td>
+          <td><div class="columns" >{{ officers.position_name}}</div></td>
+          <td><div class="columns" >{{ officers.hours_required}}</div></td>
+          <td><div class="columns" >{{ officers.emergency_contact}}</div></td>
+          <td><div class="columns" >{{ officers.all_osca}}</div></td>
 
             
         </tr>
@@ -54,49 +55,3 @@
       </span>
   </div>
 {% endblock %}
-
-<!-- <html>
-
-<head>
-    <meta charset="UTF-8">
-    <title>Members</title>
-</head>
-
-<body>
-
-    <h1>List of Members</h1>
-    <table border="1" width="600">
-        <tr>
-            <td>ID</td>
-            <td>First Name</td>
-            <td>Last Name</td>
-            <td>Preferred Name</td>
-            <td>T Number</td>
-            <td>Coop</td>
-            <td>Email</td>
-            <td>Pronouns</td>
-            <td>Time Aid</td>
-            <td>Missed Jobs</td>
-        </tr>
-
-        {% for members in allmember %}
-        <tr>
-            <td>{{ members.id }}</td>
-            <td>{{ members.first_name }}</td>
-            <td>{{ members.last_name }}</td>
-            <td>{{ members.preferred_name }}</td>
-            <td>{{ members.tnumber}}</td>
-            <td>{{ members.coop}}</td>
-            <td>{{ members.email}}</td>
-            <td>{{ members.pronouns }}</td>
-            <td>{{ members.time_aid }}</td>
-            <td>{{ members.missed_jobes}}</td>
-            
-        </tr>
-        {% endfor %}
-    </table>
-
-
-</body>
-
-</html> -->
