--- a/catalog/templates/keepbudget.html
+++ b/catalog/templates/keepbudget.html
@@ -27,7 +27,7 @@
           <td>{{ budget.id}}</td>
           <td>{{ budget.coop}}</td>
           <td>{{ budget.total_budget}}</td>
-          <td>{{ budget.remaining_budget</td>
+          <td>{{ budget.remaining_budget }}</td>
      
 
             
