--- a/catalog/templates/keepofficers.html
+++ b/catalog/templates/keepofficers.html
@@ -11,79 +11,29 @@
   </div>
 </div>
 
+<style>
+  .columns { white-space: nowrap; overflow: hidden; text-overflow:ellipsis; margin:0 auto; padding-left:5px}
+  .title { white-space: nowrap; overflow: hidden; text-overflow:ellipsis; margin:0 auto; padding-left:5px; font-weight: bold}
+</style>
 
-  <h1>List of all Officers in Keep Coop</h1>
+<h1 style="padding-left: 12%; font-weight: bold">List of all Officers in Keep Coop</h1>
     <table border="1" width="1000">
         <tr>
-          <td>ID</td>
-          <td>Coop</td>
-          <td>Member</td>
-          <td>Position Name</td>
-          <td>Position Description</td>
-          <td>Hours Required</td>
-          <td>Emergency Contact</td>
-          <td>All Osca</td>
+          <td><div class="title" >name</div></td>
+          <td><div class="title" >Position Name</div></td>
+          <td><div class="title" >Hours Required</div></td>
+          <td><div class="title" >Emergency Contact</div></td>
+          <td><div class="title" >All Osca</div></td>
         </tr>
 
         {% for officers in officers_keep %}
         <tr>
-          <td>{{ officers.id }}</td>
-          <td>{{ officers.coop}}</td>
-          <td>{{ officers.member}}</td>
-          <td>{{ officers.position_name}}</td>
-          <td>{{ officers.position_description}}</td>
-          <td>{{ officers.hours_required}}</td>
-          <td>{{ officers.emergency_contact}}</td>
-          <td>{{ officers.all_osca}}</td>
-
-            
+          <td><div class="columns" >{{ officers.member}}</div></td>
+          <td><div class="columns" >{{ officers.position_name}}</div></td>
+          <td><div class="columns" >{{ officers.hours_required}}</div></td>
+          <td><div class="columns" >{{ officers.emergency_contact}}</div></td>
+          <td><div class="columns" >{{ officers.all_osca}}</div></td>
         </tr>
         {% endfor %}
     </table>
 {% endblock %}
-
-<!-- <html>
-
-<head>
-    <meta charset="UTF-8">
-    <title>Members</title>
-</head>
-
-<body>
-
-    <h1>List of Members</h1>
-    <table border="1" width="600">
-        <tr>
-            <td>ID</td>
-            <td>First Name</td>
-            <td>Last Name</td>
-            <td>Preferred Name</td>
-            <td>T Number</td>
-            <td>Coop</td>
-            <td>Email</td>
-            <td>Pronouns</td>
-            <td>Time Aid</td>
-            <td>Missed Jobs</td>
-        </tr>
-
-        {% for members in allmember %}
-        <tr>
-            <td>{{ members.id }}</td>
-            <td>{{ members.first_name }}</td>
-            <td>{{ members.last_name }}</td>
-            <td>{{ members.preferred_name }}</td>
-            <td>{{ members.tnumber}}</td>
-            <td>{{ members.coop}}</td>
-            <td>{{ members.email}}</td>
-            <td>{{ members.pronouns }}</td>
-            <td>{{ members.time_aid }}</td>
-            <td>{{ members.missed_jobes}}</td>
-            
-        </tr>
-        {% endfor %}
-    </table>
-
-
-</body>
-
-</html> -->
