--- a/catalog/templates/registration/password_reset_email.html
+++ b/catalog/templates/registration/password_reset_email.html
@@ -1,2 +1,2 @@
-Someone asked for password reset for email {{ email }}. Follow the link below:
+Someone asked for password reset for email {{ email }} for the OSCA Database. If this was you, follow the link below. Otherwise, please ignore this message.
 {{ protocol}}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
