--- a/catalog/templates/registration/password_reset_form.html
+++ b/catalog/templates/registration/password_reset_form.html
@@ -7,6 +7,7 @@
     {{ form.email.errors }}
   {% endif %}
       <p>{{ form.email }}</p>
+    <p>Enter your email below to reset your password.</p>
     <input type="submit" class="btn btn-default btn-lg" value="Reset password">
   </form>
 {% endblock %}
