removed counts from html index

--- a/catalog/templates/index.html
+++ b/catalog/templates/index.html
@@ -19,12 +19,12 @@
 
 
 </div>
-  <p>The database has the following record counts:</p>
+  <!-- <p>The database has the following record counts:</p>
   <ul>
     <li><strong>Coops:</strong> {{ num_coops }}</li>
     <li><strong>Members:</strong> {{ num_members }}</li>
     <li><strong>Officers:</strong>{{num_officers}}</li>
-  </ul>
+  </ul> -->
   
    
 
