took out allergies from menus

--- a/catalog/templates/catalog/harkness_menu.html
+++ b/catalog/templates/catalog/harkness_menu.html
@@ -39,7 +39,7 @@
     <h4><center>Select an option!</center></h4>
     <button onclick="window.location.href='{% url ';harkness-members;'%}'">Show Harkness Members</button>
     <button onclick="window.location.href='{% url ';harkness-officers;'%}'">Show Harkness Officers</button>
-    <button onclick="window.location.href='{% url ';harkness-allergies;'%}'">Show Allergies of Harkness Members</button>
+    <!-- <button onclick="window.location.href='{% url ';harkness-allergies;'%}'">Show Allergies of Harkness Members</button> -->
     <button onclick="window.location.href='{% url ';harkness-budget;'%}'">Show Harkness Budget</button>
     <button onclick="window.location.href='{% url ';harkness-workchart;'%}'">Harkness Workchart</button>
 
