--- a/catalog/templates/catalog/keep_menu.html
+++ b/catalog/templates/catalog/keep_menu.html
@@ -39,7 +39,7 @@
     <h4><center>Select an option!</center></h4>
     <button onclick="window.location.href='{% url ';keep-members;'%}'">Show Keep Members</button>
     <button onclick="window.location.href='{% url ';keep-officers;'%}'">Show Keep Officers</button>
-    <button onclick="window.location.href='{% url ';keep-allergies;'%}'">Show Allergies of Keep Members</button>
+    <!-- <button onclick="window.location.href='{% url ';keep-allergies;'%}'">Show Allergies of Keep Members</button> -->
     <button onclick="window.location.href='{% url ';keep-budget;'%}'">Show Keep Budget</button>
     <button onclick="window.location.href='{% url ';keep-workchart;'%}'">Keep Workchart</button>
 
