--- a/catalog/templates/catalog/pyle_menu.html
+++ b/catalog/templates/catalog/pyle_menu.html
@@ -39,7 +39,7 @@
     <h4><center>Select an option!</center></h4>
     <button onclick="window.location.href='{% url ';pyle-members;'%}'">Show Pyle Members</button>
     <button onclick="window.location.href='{% url ';pyle-officers;'%}'">Show Pyle Officers</button>
-    <button onclick="window.location.href='{% url ';pyle-allergies;'%}'">Show Allergies of Pyle Members</button>
+    <!-- <button onclick="window.location.href='{% url ';pyle-allergies;'%}'">Show Allergies of Pyle Members</button> -->
     <button onclick="window.location.href='{% url ';pyle-budget;'%}'">Show Pyle Budget</button>
     <button onclick="window.location.href='{% url ';pyle-workchart;'%}'">Pyle Workchart</button>
 
