--- a/catalog/templates/catalog/tank_menu.html
+++ b/catalog/templates/catalog/tank_menu.html
@@ -39,7 +39,7 @@
     <h4><center>Select an option!</center></h4>
     <button onclick="window.location.href='{% url ';tank-members;'%}'">Show Tank Members</button>
     <button onclick="window.location.href='{% url ';tank-officers;'%}'">Show Tank Officers</button>
-    <button onclick="window.location.href='{% url ';tank-allergies;'%}'">Show Allergies of Tank Members</button>
+    <!-- <button onclick="window.location.href='{% url ';tank-allergies;'%}'">Show Allergies of Tank Members</button> -->
     <button onclick="window.location.href='{% url ';tank-budget;'%}'">Show Tank Budget</button>
     <button onclick="window.location.href='{% url ';tank-workchart;'%}'">Tank Workchart</button>
 
