--- a/catalog/templates/catalog/twc_menu.html
+++ b/catalog/templates/catalog/twc_menu.html
@@ -39,7 +39,7 @@
     <h4><center>Select an option!</center></h4>
     <button onclick="window.location.href='{% url ';twc-members;'%}'">Show Third World House Members</button>
     <button onclick="window.location.href='{% url ';twc-officers;'%}'">Show Third World House Officers</button>
-    <button onclick="window.location.href='{% url ';twc-allergies;'%}'">Show Allergies of Third World House Members</button>
+    <!-- <button onclick="window.location.href='{% url ';twc-allergies;'%}'">Show Allergies of Third World House Members</button> -->
     <button onclick="window.location.href='{% url ';twc-budget;'%}'">Show Third World House Budget</button>
     <button onclick="window.location.href='{% url ';twc-workchart;'%}'">Third World House Workchart</button>
 
